# aether

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: commit.md
src/: acpi.rs  allocator.rs  apic.rs  ata.rs  e1000.rs  elf.rs  fat.rs  fs.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  pci.rs  percpu.rs  process.rs  sched.rs  serial.rs  shell.rs  smp.rs  syscall.rs  testing.rs  unify.rs  usermode.rs  vga_buffer.rs
src/net/: arp.rs  dhcp.rs  dns.rs  ether.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/thread/: mod.rs  switch.rs
