[package]
name = "aether"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Aether — a from-scratch, iteratively-built educational x86_64 OS kernel"

[dependencies]
# Custom Rust bootloader that brings the CPU into 64-bit long mode and loads the
# kernel. Pinned to 0.9.x: together with the `bootimage` tool, a single
# `cargo run` builds and boots in QEMU — ideal for getting started. Once you
# understand the boot flow, consider upgrading to 0.11+ (which uses a
# build-script approach instead).
#
# The `map_physical_memory` feature makes the bootloader map *all* of physical
# memory into the virtual address space at a fixed offset (reported in
# `BootInfo::physical_memory_offset`). That mapping is how the kernel reaches the
# page tables, whose entries hold physical addresses (Stage 4).
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }

# x86_64 architecture abstractions: CPU instruction wrappers, register access,
# page tables, interrupt descriptor tables, and other structures.
x86_64 = "0.14"

# 16550-compatible serial (UART) driver, used to send kernel output to the terminal.
uart_16550 = "0.2"

# Spinlock-based Mutex for no_std environments (bare metal has no OS-provided
# thread-blocking primitives).
spin = "0.9"

# Driver for the pair of chained 8259 PICs (the legacy interrupt controller).
# Pinned to 0.10.x because it depends on x86_64 0.14, matching ours; 0.11 pulls
# in x86_64 0.15 and would duplicate that crate in the build.
pic8259 = "0.10"
pc-keyboard = "0.9.0"

# Combinators and utilities for `Future` / `Stream`. Stage 5 uses `Stream` /
# `StreamExt` (to `.await` a sequence of scancodes one by one) and `AtomicWaker`
# (so the keyboard interrupt can wake the task waiting on that stream). Built for
# no_std: default features off, only `alloc` on.
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }

# Lock-free concurrent queues. `ArrayQueue` is a bounded ring buffer that the
# keyboard interrupt handler can push scancodes into *without taking a lock* —
# locking inside an interrupt handler risks deadlocking against interrupted code
# that already holds the same lock. no_std: default off, `alloc` on.
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }

# A `OnceCell` that is initialized once and then read concurrently (including
# from interrupt context). Holds the global scancode queue. Default features off
# for no_std (the default pulls in `std`); that exposes the spin-based
# `conquer_once::spin::OnceCell`.
conquer-once = { version = "0.4.0", default-features = false }

# ---------------------------------------------------------------------------
# bootimage / QEMU run configuration
# ---------------------------------------------------------------------------
[package.metadata.bootimage]
# - serial stdio : connect the VM's serial port to the current terminal's stdio
#
# As of Stage 1 we open the graphical window so the VGA text output is visible
# (WSL2 needs WSLg or an X server for this — it ships with Windows 11). Serial
# still goes to the terminal, so you get both the boot log and the screen.
#
# Tip: on a headless setup with no display, add "-display", "none" back here; the
# serial log keeps working even when no window can open.
run-args = [
    "-serial", "stdio",
]

# `cargo test` runs each test binary through these args instead of `run-args`.
# - isa-debug-exit : a device the kernel writes to in order to exit QEMU with a
#   status code (see src/testing.rs); `iobase=0xf4` matches `exit_qemu`.
# - serial stdio   : the test output ("name ... [ok]" lines) reaches the terminal.
# - display none   : tests run headless (no window), unlike the interactive
#   `cargo run`, so they work over SSH / in CI.
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
# When the tests pass, the kernel calls exit_qemu(Success), so QEMU exits with
# (0x10 << 1) | 1 = 33. Tell bootimage to treat exit code 33 as a passing run
# (cargo test exit 0); any other code — 35 from a failing test, or a timeout — is
# reported as a failure.
test-success-exit-code = 33
# Fail a run that hangs (a deadlock, or a triple-fault reboot loop) instead of
# blocking forever. Seconds of wall-clock for the QEMU run itself.
test-timeout = 120

# Keep debug info in release builds too, to make debugging the kernel with gdb
# easier later.
[profile.release]
debug = true
